rns-lang/tests/snapshots/parser-outside_class_directive-dot_code.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.code
.class public HelloWorld

.end method
----- STDOUT -----

----- STDERR -----
Error: Unexpected directive before class definition
   ╭─[ test_data/integration/parser/outside_class_directive/dot_code.ja:1:1 ]
   │
 1 │ .code
   │ ──┬──  
   │   ╰──── The '.code' directive is only allowed inside a method definition.
   │ 
   │ Note: Define a method first using '.method [access_flags] <name> <descriptor>'.
───╯
